--- a/css/about.css
+++ b/css/about.css
@@ -5,11 +5,11 @@ src: url(https://cdn.jsdelivr.net/gh/max32002/naikaifont@1.89/webfont/NaikaiFont
 
 @font-face {
 font-family: 'MaokenAssortedSans-TC';
-src: url('/Mewseum/fonts/MaokenAssortedSans-TC.ttf') format('truetype');
+src: url('../fonts/MaokenAssortedSans-TC.ttf') format('truetype');
 }
 
 .about_page{
-    background-image: url('/Mewseum/img/background/cathead.png');
+    background-image: url('../img/background/cathead.png');
     background-size: 1000px;
     background-repeat: repeat;
     background-color: #C59C6C50;
