--- a/css/cart.css
+++ b/css/cart.css
@@ -208,7 +208,6 @@ h1 {
 .btn_primary:hover {
     background-color: #f37a9e;
     transform: translateY(-2px);
-    box-shadow: 0 4px 10px rgba(133, 22, 83, 0.3);
 }
 
 .btn_secondary {
@@ -229,8 +228,7 @@ h1 {
     margin-top: 25px;
     padding: 15px 25px;
     font-size: 1.2em;
-    letter-spacing: 1px;
-    box-shadow: 0 4px 10px rgba(255, 107, 107, 0.3);
+    letter-spacing: 1px; 
     border: none;
     border-radius: 30px;
     transition: all 0.3s ease;
@@ -240,14 +238,13 @@ h1 {
 .btn_checkout:hover {
     background-color: #f37a9e;
     transform: translateY(-2px);
-    box-shadow: 0 6px 15px rgba(255, 107, 107, 0.4);
 }
 
 .btn_apply_discount {
     background-color: #FFB3A7;
     color: white;
     padding: 12px 25px;
-    border-radius: 50px;
+    border-radius: 0px  25px 25px 0px;
     font-size: 1em;
     border: none;
     cursor: pointer;
@@ -292,5 +289,4 @@ h1 {
 
 .discount_code input[type="text"]:focus {
     border-color: #f37a9e;
-    box-shadow: 0 0 0 3px rgba(255, 107, 107, 0.4);
 }
