--- a/css/layout.css
+++ b/css/layout.css
@@ -171,7 +171,7 @@ nav ul a:hover{
         background-color: #FBF8F0;
         padding: 1.25rem;
         text-align: center;
-        width: 200px;
+        width: 100%;
     }
 
 
