--- a/css/layout.css
+++ b/css/layout.css
@@ -172,6 +172,7 @@ nav ul a:hover{
         padding: 1.25rem;
         text-align: center;
         width: 100%;
+        font-size: 1.5rem;
     }
 
 
