--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ src: url('../fonts/MaokenAssortedSans-TC.ttf') format('truetype');
 }
 
 body{
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 .hero{
@@ -23,15 +23,15 @@ body{
 }
 
 .shop_cta {
-position: absolute;
-bottom: 10%;
-left: 50%;
-transform: translateX(-50%);
-display: flex;
-justify-content: center;
-flex-direction: column;
-align-items: center;
-gap: 30px;
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
 }
 
 .shop_cta .text p{
@@ -382,17 +382,8 @@ text-shadow: 0 2px 6px rgba(0,0,0,0.3);
     background-repeat: no-repeat;
     width: 742px;
     height: 466px;
-
     position: relative;
-    /* align-self: flex-start;
-    margin-top: -50px; */
 }
-
-/* .newsletter_img img{
-    height: 466px;
-    object-fit: contain;
-    display: block;
-} */
 
 .speech_text{
     position: absolute;
@@ -529,37 +520,90 @@ form button:hover {
     }
 
     .about_container{
-        width: min(1200px,90vw);
+        width: min(1200px, 90vw);
+        padding: 0 20px;
+        box-sizing: border-box;
     }
 
     .about_wrap{
-        display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
     }
 
-    .about_wrap .text,
-    .about_wrap .text h4,
-    .about_wrap .text p,
-    .about_btn {
-    text-align: center
-    };
-
-    
-/* 
-    .about_btn a{
-        text-decoration: none;
+    .about_wrap.pic{
+        width: 100%;
+        max-width: 300px;
+        display: flex;
+        justify-content: center;
+        flex-shrink: 0;
     }
-    .about_btn_text{
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-family: naikaifont;
-        font-size: 1.5em;
-        font-weight: 600;
-        color: #5C4033;
+
+    .about_wrap .pic img{
+        width: 350px;
+        height: auto;
+        max-width: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .about_wrap .text{
+        text-align: center;
+        gap: 20px;
+    }
+
+    .about_wrap .text h4{
+        font-size: 2.5rem;
         white-space: nowrap;
-    } */
+        line-height: 1.3;
+    }
 
+    .about_wrap .text p{
+        font-size: 1.25rem;
+        line-height: 1.5;
+    }
 
+    .about_btn{
+        align-self: center;
+    }
+
+    .newsletter_container{
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+    .newsletter_img{
+        order: -1;
+        max-width: 500px;
+        height: 300px;
+        background-size: contain;
+        background-position: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .speech_text{
+        font-family: naikaifont;
+        font-size: 2.5rem;
+        color: #5C4033;
+        line-height: 1.2;
+        position: static; /* 改為靜態定位 */
+        align-self: center;
+        margin-left: -150px;
+    }
+
+    .newsletter_text h3{
+        font-size: 2.5rem;
+        white-space: normal;
+    }
+
+    .newsletter_text p{
+        font-size: 1.25rem;
+        white-space: normal;
+    }
 }
 
 @media screen and (max-width: 576px) {
@@ -576,5 +620,9 @@ form button:hover {
         font-size: 1.5rem;
         margin-top: 15px;
     }
+
+}
+
+@media screen and (max-width: 360px) {
 
 }
