--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,6 @@ font-family: 'MaokenAssortedSans-TC';
 src: url('../fonts/MaokenAssortedSans-TC.ttf') format('truetype');
 }
 
-body{
-    /* overflow-x: hidden; */
-}
-
 .hero{
     background-image: url("../img/banner.png");
     background-repeat: no-repeat;
@@ -151,7 +147,7 @@ text-shadow: 0 2px 6px rgba(0,0,0,0.3);
 }
 
 .about{
-    width: 100%;
+    width: min(1200px, 90vw);
     display: flex;
     position: relative;
     justify-content: center;
@@ -520,7 +516,6 @@ form button:hover {
     }
 
     .about_container{
-        width: min(1200px, 90vw);
         padding: 0 20px;
         box-sizing: border-box;
     }
@@ -576,8 +571,8 @@ form button:hover {
     }
     .newsletter_img{
         order: -1;
-        max-width: 500px;
-        height: 300px;
+        max-width: 400px;
+        height: 200px;
         background-size: contain;
         background-position: center;
         display: flex;
@@ -587,12 +582,12 @@ form button:hover {
 
     .speech_text{
         font-family: naikaifont;
-        font-size: 2.5rem;
+        font-size: 2rem;
         color: #5C4033;
         line-height: 1.2;
         position: static; /* 改為靜態定位 */
         align-self: center;
-        margin-left: -150px;
+        margin-left: -100px;
     }
 
     .newsletter_text h3{
@@ -621,8 +616,41 @@ form button:hover {
         margin-top: 15px;
     }
 
+    /* form {
+        margin-right: 20px;
+    } */
+
+
 }
 
 @media screen and (max-width: 360px) {
+    .about_container{
+        padding: 0 20px;
+    }
 
+    .about_wrap.pic{
+        display: flex;
+        justify-content: center;
+        flex-shrink: 0;
+    }
+
+    .about_wrap .pic img{
+        width: 250px;
+    }
+
+    .about_wrap .text h4{
+        font-size: 2.5rem;
+        white-space: normal;
+        line-height: 1.3;
+    }
+
+    .about_wrap .text p{
+        font-size: 1.25rem;
+        white-space: normal;
+        line-height: 1.5;
+    }
+
+    .about_btn{
+        align-self: center;
+    }
 }
